# Knoux-Art-Studio

./: .eslintrc.cjs  .prettierignore  App.tsx  CMakeLists.txt  Create-KnouxProject.ps1  F_Deploy_Knoux_AI_and_Utils.ps1  F_Deploy_Knoux_Core_Infrastructure.ps1  F_Deploy_Knoux_Creative_Editors.ps1  F_Knoux_03_AI_Components.ps1  F_Knoux_03_Editors_Sovereign.ps1  F_Knoux_04_AI_Integration.ps1  F_Knoux_05_Video_Logic.ps1  F_Knoux_06_Advanced_React_Views.ps1  F_Knoux_07_Finalizer.ps1  F_Knoux_Master_Deployment.ps1  F_Knoux_Supreme_Factory.ps1  F_Knoux_Ultimate_Deployment.ps1  README.md  Setup-CompleteProject.ps1  activate.ps1  activate.sh  build.bat  build.sh  constants.tsx  index.html  knoux_helpers.ps1  metadata.json  package.json  pr-description.md  setup_knoux.ps1  setup_knoux_final.ps1  setup_knoux_sovereign.ps1  setup_knoux_supreme.ps1  tsconfig.temp.json  types.ts
KnouxArtStudio/: CMakeLists.txt  build.bat
KnouxArtStudio/ai_models/: model_manifest.json
KnouxArtStudio/src/ai/: AIBodyDetector.cpp  AIStudio.cpp  AIStudio.h
KnouxArtStudio/src/body_editor/: BodyEditor.h
KnouxArtStudio/src/core/: StyleManager.cpp
KnouxArtStudio/src/face_editor/: FaceRetouch.cpp
KnouxArtStudio/src/ui/: GlassButton.cpp  HomeScreen.h
KnouxArtStudio/src/utils/: ExportManager.cpp  ExportManager.h  ImageProcessor.h
KnouxArtStudio/src/video_editor/: VideoEditor.h
ai_models/: model_manifest.json
components/: Sidebar.tsx
config/: default_settings.json  export_presets.json
scripts/: Create-AIExtendedFiles.ps1  Create-AIFiles.ps1  Create-AllFiles.ps1  Create-ConfigFiles.ps1  Create-CoreFiles.ps1  Create-EditorFiles.ps1  Create-UIFiles.ps1  Create-UtilityFiles.ps1  restore-genai.sh  run-full-studio.sh  smoke-build.sh
services/: knoux_engine.ts
src/ai/: AIBodyDetector.h  AIFaceDetector.cpp  AIFaceDetector.h  AIModelManager.cpp  AIModelManager.h
src/ai/image_gen/: StableDiffusionXL.cpp  StableDiffusionXL.h
src/ai/segmentation/: RMBG.h
src/ai/upscale/: RealESRGAN.h
src/body_editor/: BodyEditor.cpp
src/components/: LivePreview.tsx  MetadataPanel.tsx
src/core/: MainWindow.cpp  MainWindow.h  StyleManager.h  main.cpp
src/face_editor/: FaceRetouch.h
src/makeup/: MakeupStudio.cpp  MakeupStudio.h
src/mocks/: genai-mock.ts
src/photo_editor/: PhotoEditor.cpp  PhotoEditor.h
src/services/: knoux_engine.ts  videoProcessor.ts
src/styles/: StudioDashboard.css
src/types/: index.ts
src/ui/: CyberpunkSplash.cpp  CyberpunkSplash.h  GlassButton.h  GlassPanel.cpp  GlassPanel.h  HomeScreen.cpp  NotificationManager.cpp  NotificationManager.h  SettingsPanel.cpp  SettingsPanel.h
src/utils/: ExportManager.cpp  ImageProcessor.cpp  imageFilters.ts  knouxSonar.ts
src/video_editor/: VideoEditor.cpp
src/views/: BodyEditor.tsx  MakeupStudio.tsx  PhotoEditor.tsx  StudioDashboard.tsx  TemplateGallery.tsx  VideoStudio.tsx
tests/: elysian_canvas.test.ts  genai_mock.test.ts  knoux_engine.test.ts  photo_editor.test.ts
views/: BodyEditor.tsx  ElysianCanvas.tsx  FaceRetouch.tsx  Home.tsx  MakeupStudio.tsx  Onboarding.tsx  PhotoEditor.tsx  Settings.tsx  SplashScreen.tsx  StudioDashboard.tsx  TemplateGallery.tsx  VideoEditor.tsx
